appId: com.langdk.ultimatestats.dev
name: Record Opponent Goal
---
- extendedWaitUntil:
    visible:
      id: 'defense-opp-goal'
    timeout: 2000
- tapOn:
    id: 'defense-opp-goal'
    retryTapIfNoChange: true
- extendedWaitUntil:
    visible:
      id: 'between-point-start-next'
    timeout: 5000
