appId: com.langdk.ultimatestats.dev
name: Setup Advanced Tracker Game Through UI
---
- launchApp
- openLink: ultimatestats-dev:///__maestro_seed__?mode=team

- extendedWaitUntil:
    visible:
      id: 'maestro-setup-running'
    timeout: 5000
- retry:
    maxRetries: 1
    commands:
      - extendedWaitUntil:
          notVisible:
            id: 'maestro-setup-running'
          timeout: 15000
- extendedWaitUntil:
    visible:
      text: 'DASHBOARD'
    timeout: 15000
- tapOn:
    id: 'dashboard-new-game-button'
- tapOn:
    id: 'new-game-sheet-advanced'
- assertVisible:
    text: 'ADVANCED TRACKER'
- tapOn:
    text: 'Zoboomafoo'
- runFlow:
    when:
      visible: 'FMP Majority'
    commands:
      - tapOn:
          text: 'FMP Majority'
- tapOn:
    id: 'advanced-tracker-set-line-button'
- assertVisible:
    id: 'line-select-title'
- tapOn:
    id: 'player-chip-Joe'
- tapOn:
    id: 'player-chip-Jon'
- tapOn:
    id: 'player-chip-Mike'
- tapOn:
    id: 'player-chip-Molly'
- tapOn:
    id: 'player-chip-Kelly'
- tapOn:
    id: 'player-chip-Rachel'
- tapOn:
    id: 'player-chip-Joel'
- tapOn:
    id: 'line-select-confirm'
- assertVisible:
    text: 'THEY ARE PULLING'
- assertVisible:
    id: 'pull-skip-timing'
- tapOn:
    id: 'pull-skip-timing'
- extendedWaitUntil:
    visible:
      text: 'TAP WHO STARTS WITH DISC'
    timeout: 5000
